--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   </head>
   <body>
-    <h1>Vacation Website</h1>
-    <p>Welcome to our vacation site where we can help you find nice place to have vacation</p>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="bg-primary">Vacation Website</h1>
+        <p class="bg-success">Welcome to our vacation site where we can help you find nice place to have vacation</p>
+      </div>
+      <h2>Sunny places</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras luctus sem sit amet vehicula aliquam. Duis quis purus id quam ultricies ornare. Integer dolor nibh, vehicula quis accumsan a, sodales sed nibh. Nunc cursus nulla sit amet lectus ullamcorper, vel viverra sapien lacinia. Ut sagittis laoreet neque vitae fermentum. Ut varius euismod blandit. Integer id maximus lacus</p>
 
-    <h2>Sunny places</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras luctus sem sit amet vehicula aliquam. Duis quis purus id quam ultricies ornare. Integer dolor nibh, vehicula quis accumsan a, sodales sed nibh. Nunc cursus nulla sit amet lectus ullamcorper, vel viverra sapien lacinia. Ut sagittis laoreet neque vitae fermentum. Ut varius euismod blandit. Integer id maximus lacus</p>
+      <h2>Places for skiing</h2>
+      <p>Aliquam vulputate maximus ipsum, at vulputate nibh venenatis vitae. Vivamus eget dictum purus, eu rutrum felis. Pellentesque semper sapien sodales nunc consequat cursus. Sed non erat eu dolor mattis aliquam eget eu dui. Mauris sit amet tortor vulputate lorem iaculis gravida. Integer volutpat, metus eget posuere vehicula, leo eros eleifend nunc, vel volutpat felis nisl sit amet est. Aenean eget ex nisl. Nullam et lacus non lacus egestas volutpat. Nullam gravida a risus eu semper. Suspendisse ut porta lectus, quis posuere ligula. Donec urna enim, lacinia sit amet elit et, porttitor sodales nisi. Proin tellus sapien, interdum eu justo ac, dictum consequat tellus</p>
 
-    <h2>Places for skiing</h2>
-    <p>Aliquam vulputate maximus ipsum, at vulputate nibh venenatis vitae. Vivamus eget dictum purus, eu rutrum felis. Pellentesque semper sapien sodales nunc consequat cursus. Sed non erat eu dolor mattis aliquam eget eu dui. Mauris sit amet tortor vulputate lorem iaculis gravida. Integer volutpat, metus eget posuere vehicula, leo eros eleifend nunc, vel volutpat felis nisl sit amet est. Aenean eget ex nisl. Nullam et lacus non lacus egestas volutpat. Nullam gravida a risus eu semper. Suspendisse ut porta lectus, quis posuere ligula. Donec urna enim, lacinia sit amet elit et, porttitor sodales nisi. Proin tellus sapien, interdum eu justo ac, dictum consequat tellus</p>
+      <h2>Room and Board</h2>
+      <p>Vestibulum sollicitudin nibh eget vehicula volutpat. Phasellus rutrum, ex quis convallis pellentesque, mauris dolor accumsan odio, et ultricies sem lorem sed arcu. Phasellus lacinia dictum venenatis. Curabitur sed posuere erat. Maecenas dui lacus, finibus at velit eget, egestas mattis ante. Proin posuere placerat est nec ultricies. Proin sed diam lobortis, lobortis nibh ut, gravida libero. Nulla facilisi. Donec ut diam ligula. Sed sollicitudin bibendum iaculis. In a nibh pharetra, venenatis nisl ac, ullamcorper lectus.</p>
 
-    <h2>Voom and Board</h2>
-    <p>Vestibulum sollicitudin nibh eget vehicula volutpat. Phasellus rutrum, ex quis convallis pellentesque, mauris dolor accumsan odio, et ultricies sem lorem sed arcu. Phasellus lacinia dictum venenatis. Curabitur sed posuere erat. Maecenas dui lacus, finibus at velit eget, egestas mattis ante. Proin posuere placerat est nec ultricies. Proin sed diam lobortis, lobortis nibh ut, gravida libero. Nulla facilisi. Donec ut diam ligula. Sed sollicitudin bibendum iaculis. In a nibh pharetra, venenatis nisl ac, ullamcorper lectus.</p>
+      <h2>Testimonials</h2>
+      <blockquote class="text-success">
+        <p>Sed sapien est, iaculis eget bibendum at, aliquet at felis. Nam congue pharetra elit quis vehicula. Fusce vel enim nec dolor aliquet vehicula sit amet nec nunc. Donec a semper ante, scelerisque eleifend lorem. Nullam fermentum consequat quam, in faucibus nisl consectetur sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras pharetra leo in orci commodo, ut pretium velit dignissim. Nam efficitur ullamcorper ipsum egestas ultrices.</p>
+        <p>Vestibulum eu mauris eu orci vulputate ornare ut sed ante. Phasellus a magna magna. Nam non lectus consectetur metus congue pellentesque. Aenean auctor, libero vitae sodales maximus, turpis dui iaculis dolor, sed tristique nibh neque ut mi. Maecenas sed nisi tellus. Etiam fermentum tempus justo, nec consequat nunc tincidunt nec. Sed id consequat felis, fermentum interdum nunc. Morbi id egestas ex. Nunc sed mattis velit. Curabitur a leo a magna dapibus ornare eget id velit. Fusce blandit leo diam, ac consectetur tortor vulputate eget. Phasellus iaculis eget turpis ut molestie.</p>
+      </blockquote>
+    </div>
 
   </body>
 </html>
