added vacation packages and put them in columns

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Vacation Site</title>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
     <div class="container">
@@ -24,7 +25,24 @@
         <p>Sed sapien est, iaculis eget bibendum at, aliquet at felis. Nam congue pharetra elit quis vehicula. Fusce vel enim nec dolor aliquet vehicula sit amet nec nunc. Donec a semper ante, scelerisque eleifend lorem. Nullam fermentum consequat quam, in faucibus nisl consectetur sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras pharetra leo in orci commodo, ut pretium velit dignissim. Nam efficitur ullamcorper ipsum egestas ultrices.</p>
         <p>Vestibulum eu mauris eu orci vulputate ornare ut sed ante. Phasellus a magna magna. Nam non lectus consectetur metus congue pellentesque. Aenean auctor, libero vitae sodales maximus, turpis dui iaculis dolor, sed tristique nibh neque ut mi. Maecenas sed nisi tellus. Etiam fermentum tempus justo, nec consequat nunc tincidunt nec. Sed id consequat felis, fermentum interdum nunc. Morbi id egestas ex. Nunc sed mattis velit. Curabitur a leo a magna dapibus ornare eget id velit. Fusce blandit leo diam, ac consectetur tortor vulputate eget. Phasellus iaculis eget turpis ut molestie.</p>
       </blockquote>
-    </div>
 
+      <div class="row">
+        <h2>Vacation Packaes</h2>
+
+        <div class="col-md-4">
+          <h3>Bronze</h3>
+          <p>This is our basic backpage. Costs $200</p>
+        </div>
+        <div class="col-md-4">
+          <h3>Silver</h3>
+          <p>This is our silver package. Cost $400</p>
+        </div>
+        <div class="col-md-4">
+          <h3>Gold</h3>
+          <p>This is our gold package. It costs $800</p>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
