added custom css to h1 and vacation packages

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <div class="row">
         <h2>Vacation Packaes</h2>
 
-        <div class="col-md-4">
+        <div class="col-md-4" id="bronze">
           <h3>Bronze</h3>
           <p>This is our basic backpage. Costs $200</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" id="silver">
           <h3>Silver</h3>
           <p>This is our silver package. Cost $400</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" id="gold">
           <h3>Gold</h3>
           <p>This is our gold package. It costs $800</p>
         </div>
